2013-11-29
	1. Improved simcard_restart() function (optiolnal fields cleanup).
2013-11-26
	1. New version simbank-0.6
	2. Minor bug fixes after testing on SBG4.
2013-11-05
	1. Fixed simcard_restart() function (flags reinitialization).
2013-10-10
	1. Removed LED functionality.
	2. Change main select timeout to 10000 us.
2013-09-20
	1. Added ability to ajust wait time thriug command line option 'w' with
range from 0 to 30 seconds.
	2. Added feature to delete all SMS from SIM. Command line option 'x'.