@@ -301,7 +301,7 @@ void tcp_ss9006_cli_msg_ext_add_param_string(struct tcp_ss9006_client *cli, u_in
 	cli->xmit_length += length;
 }
 
-void simcard_restart(struct simcard *simcard, u_int32_t timeout, int erase_sms, int erase_fields)
+void simcard_restart(struct simcard *simcard, u_int32_t timeout, int erase_sms)
 {
 	// set SIM-card state to disable
 	simcard->state = SIMBANK_SIMCARD_STATE_DISABLE;
@@ -324,10 +324,12 @@ void simcard_restart(struct simcard *simcard, u_int32_t timeout, int erase_sms, 
 	simcard->flags.erase_sms = 0;
 	simcard->flags.erase_sms_req = erase_sms;
 	// init text fields
-	if (erase_fields) {
-		simcard->ifacedev.iccid_len = 0;
-		simcard->ifacedev.spn_len = 0;
-		simcard->ifacedev.msisdn_len = 0;
+	simcard->ifacedev.iccid_len = 0;
+	simcard->ifacedev.spn_len = 0;
+	simcard->ifacedev.msisdn_len = 0;
+	// unbind from client
+	if (simcard->client >= 0) {
+		simcard->client = -1;
 	}
 }
 
@@ -839,7 +841,7 @@ int main(int argc, char **argv)
 						}
 					}
 					// restart SIM-card after 1000 ms
-					simcard_restart(&simcards[i], 1000, erase_sms, 1);
+					simcard_restart(&simcards[i], 1000, erase_sms);
 				}
 				// wait_time
 				if (is_x_timer_enable(simcards[i].timers.wait_time) && is_x_timer_fired(simcards[i].timers.wait_time)) {
@@ -858,7 +860,7 @@ int main(int argc, char **argv)
 						}
 					}
 					// restart SIM-card after 1000 ms
-					simcard_restart(&simcards[i], 1000, erase_sms, 1);
+					simcard_restart(&simcards[i], 1000, erase_sms);
 				}
 				// command
 				if (is_x_timer_enable(simcards[i].timers.command) && is_x_timer_fired(simcards[i].timers.command)) {
@@ -874,7 +876,7 @@ int main(int argc, char **argv)
 						LOG("%s: Command timer fired\n", simcards[i].prefix);
 					}
 					// restart SIM-card after 1000 ms
-					simcard_restart(&simcards[i], 1000, erase_sms, 1);
+					simcard_restart(&simcards[i], 1000, erase_sms);
 				}
 				// status
 				if (is_x_timer_enable(simcards[i].timers.status) && is_x_timer_fired(simcards[i].timers.status)) {
@@ -906,7 +908,7 @@ int main(int argc, char **argv)
 			if (simcards[i].flags.reset) {
 				simcards[i].flags.reset = 0;
 				// restart SIM-card now
-				simcard_restart(&simcards[i], 0, erase_sms, 0);
+				simcard_restart(&simcards[i], 0, erase_sms);
 			}
 			// command
 			// write
@@ -1078,7 +1080,7 @@ int main(int argc, char **argv)
 										}
 									}
 									// restart SIM-card after 1000 ms
-									simcard_restart(&simcards[i], 1000, erase_sms, 1);
+									simcard_restart(&simcards[i], 1000, erase_sms);
 								} else {
 									// restart wait_time timer
 									if (wait_time) {
@@ -1211,7 +1213,7 @@ int main(int argc, char **argv)
 										goto main_end;
 									}
 									// restart SIM-card after 1000 ms
-									simcard_restart(&simcards[i], 1000, erase_sms, 1);
+									simcard_restart(&simcards[i], 1000, erase_sms);
 								} else {
 									// restart wait_time timer
 									if (wait_time) {
@@ -1313,7 +1315,7 @@ int main(int argc, char **argv)
 										goto main_end;
 									}
 									// restart SIM-card after 1000 ms
-									simcard_restart(&simcards[i], 1000, erase_sms, 1);
+									simcard_restart(&simcards[i], 1000, erase_sms);
 								} else {
 									// restart wait_time timer
 									if (wait_time) {
@@ -1351,7 +1353,7 @@ int main(int argc, char **argv)
 														goto main_end;
 													} 
 													// restart SIM-card after 1000 ms
-													simcard_restart(&simcards[i], 1000, erase_sms, 1);
+													simcard_restart(&simcards[i], 1000, erase_sms);
 												} else if (gsm_sim_cmd_is_done(&simcards[i].ifacedev)) {
 													if (simcards[i].ifacedev.iccid_len) {
 														LOG("%s: ICCID=\"%.*s\"\n", simcards[i].prefix, (int)simcards[i].ifacedev.iccid_len, simcards[i].ifacedev.iccid);
@@ -1384,7 +1386,7 @@ int main(int argc, char **argv)
 														goto main_end;
 													} 
 													// restart SIM-card after 1000 ms
-													simcard_restart(&simcards[i], 1000, erase_sms, 1);
+													simcard_restart(&simcards[i], 1000, erase_sms);
 												} else if (gsm_sim_cmd_is_done(&simcards[i].ifacedev)) {
 													if (simcards[i].ifacedev.spn_len) {
 														LOG("%s: SPN=\"%.*s\"\n", simcards[i].prefix, (int)simcards[i].ifacedev.spn_len, simcards[i].ifacedev.spn);
@@ -1417,7 +1419,7 @@ int main(int argc, char **argv)
 														goto main_end;
 													} 
 													// restart SIM-card after 1000 ms
-													simcard_restart(&simcards[i], 1000, erase_sms, 1);
+													simcard_restart(&simcards[i], 1000, erase_sms);
 												} else if (gsm_sim_cmd_is_done(&simcards[i].ifacedev)) {
 													if (simcards[i].ifacedev.msisdn_len) {
 														LOG("%s: MSISDN=\"%.*s\"\n", simcards[i].prefix, (int)simcards[i].ifacedev.msisdn_len, simcards[i].ifacedev.msisdn);
@@ -1450,7 +1452,7 @@ int main(int argc, char **argv)
 														goto main_end;
 													} 
 													// restart SIM-card after 1000 ms
-													simcard_restart(&simcards[i], 1000, erase_sms, 1);
+													simcard_restart(&simcards[i], 1000, erase_sms);
 												} else if (gsm_sim_cmd_is_done(&simcards[i].ifacedev)) {
 													simcards[i].flags.erase_sms = 0;
 													simcards[i].flags.busy = 0;
@@ -1552,7 +1554,7 @@ int main(int argc, char **argv)
 								}
 #if 0
 								// restart SIM-card after 1000 ms
-								simcard_restart(&simcards[i], 1000, erase_sms, 1);
+								simcard_restart(&simcards[i], 1000, erase_sms);
 #endif
 								break;
 							}
